gitops/apps/tdarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
        app.kubernetes.io/name: tdarr
    spec:
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:latest
          ports:
            - containerPort: 8265
              protocol: TCP
            - containerPort: 8266
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /app/server
              subPath: server
            - name: data
              mountPath: /app/configs
              subPath: configs
            - name: data
              mountPath: /app/logs
              subPath: logs
            - name: media
              mountPath: /srv/media/jellyfin
            - name: temp
              mountPath: /temp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tdarr-data-pvc
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
        - name: temp
          emptyDir: {}
