gitops/apps/tdarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: tdarr
  ports:
    - name: http
      port: 8265
      targetPort: 8265
      protocol: TCP
    - name: server
      port: 8266
      targetPort: 8266
      protocol: TCP
