gitops/apps/tdarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Tdarr
    gethomepage.dev/icon: tdarr.png
    gethomepage.dev/description: Media transcode automation
    gethomepage.dev/href: "http://tdarr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: tdarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
